microk8s-base.yaml

AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy Ubuntu (latest LTS via SSM) + MicroK8s in a dedicated VPC (public subnet)

Parameters:
  VpcCidr:
    Type: String
    Default: 172.21.0.0/16
    Description: CIDR for the new VPC
  PublicSubnetCidr:
    Type: String
    Default: 172.21.1.0/24
    Description: CIDR for the public subnet
  AllowedSSHCidr:
    Type: String
    Default: "66.159.208.0/22"
    Description: CIDR allowed to SSH to the instance (use your IP/CIDR for security)
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: "jyp-aws-anz"
    Description: Name of an existing EC2 KeyPair to enable SSH access
  KubeAPIPort:
    Type: String
    Default: 8443
    Description: TCP port used by microk8s API
  InstanceType:
    Type: String
    Default: t3.medium
    AllowedValues:
      - t3.small
      - t3.medium
      - t3.large
      - t3a.small
      - t3a.medium
      - t3a.large
    Description: EC2 instance type for the MicroK8s node
  MicroK8sChannel:
    Type: String
    Default: "1.35"
    AllowedPattern: "^latest/stable$|^[0-9]+\\.[0-9]+$"
    Description: Snap channel for MicroK8s (e.g., 'latest/stable' or '1.33', '1.35')
  UbuntuAmiParameter:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/canonical/ubuntu/server/24.04/stable/current/amd64/hvm/ebs-gp3/ami-id"
    Description: Canonical public SSM path for latest Ubuntu 24.04 LTS AMI (per-region)
  HostedZoneName:
    Type: String
    Default: 'apac.venafidemo.com.'
    Description: "(Optional) Hosted zone name WITH trailing dot (e.g., apac.venafidemo.com.). Leave empty if using HostedZoneId."
  ClusterName:
    Type: String
    Default: "microk8s"
    AllowedPattern: "[a-zA-Z][-a-zA-Z0-9]*|arn:[-a-zA-Z0-9:/._+]*"
    Description: cluster will be named <Name>.apac.venafidemo.com
  FQDN:
    Type: String
    Default: "microk8s-16.apac.venafidemo.com"
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: MicroK8s-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MicroK8s-IGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnetCidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: MicroK8s-PublicSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: MicroK8s-Public-RT

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTPS (also 80 for acme HTTP-01 and 443 access to pod)
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AllowedSSHCidr
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: !Ref KubeAPIPort
          ToPort: !Ref KubeAPIPort
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: MicroK8s-SG
        - Key: AllowFromEverywhere
          Value: "yes"

  MicroK8sInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref UbuntuAmiParameter
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref PublicSubnet
          GroupSet:
            - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: !Join [ -, ["MicroK8s-Node", !Ref ClusterName]]
        - Key: AllowFromEverywhere
          Value: "yes"
      UserData:
        Fn::Base64: !Sub |
          #cloud-config
          write_files:
            - path: /var/snap/microk8s/common/.microk8s.yaml 
              permissions: 0644
              owner: root
              content: |
                # Default launch configuration for MicroK8s.
                ---
                version: 0.1.0
                extraSANs:
                  - ${FQDN}
                extraKubeAPIServerArgs:
                  --secure-port: ${KubeAPIPort}
                  --service-account-issuer: 'https://${FQDN}:${KubeAPIPort}'
                  --service-account-jwks-uri: 'https://${FQDN}:${KubeAPIPort}/openid/v1/jwks'
                extraKubeletArgs:
                  --cluster-domain: cluster.local
                addons:
                  - name: dns 
                  - name: rbac
                  - name: hostpath-storage
                  - name: cert-manager
                  - name: ingress
            - path: /home/ubuntu/clusterissuers.yaml
              content: |
                # LE Cluster Issuer
                apiVersion: cert-manager.io/v1
                kind: ClusterIssuer
                metadata:
                  name: letsencrypt-staging
                spec:
                  acme:
                    email: jy@blufrogs.com
                    profile: tlsserver
                    server: https://acme-staging-v02.api.letsencrypt.org/directory
                    privateKeySecretRef:
                      name: example-issuer-account-key
                    solvers:
                    - http01:
                        ingress:
                          ingressClassName: nginx
            - path: /home/ubuntu/cert.yaml
              content: |
                # cert-example
                apiVersion: cert-manager.io/v1
                kind: Certificate
                metadata:
                  name: microk8s-external
                spec:
                  commonName: ${FQDN}
                  dnsNames:
                    - ${FQDN}
                  issuerRef:
                    kind: ClusterIssuer
                    name: letsencrypt-staging
                  secretName: mycert-tls
                  privateKey:
                    rotationPolicy: Always
                  renewBefore: 60h # 15d
                  usages:
                    - server auth
            - path: /home/ubuntu/traffic.yaml 
              content: |
                apiVersion: traefik.io/v1alpha1
                kind: IngressRoute
                metadata:
                  name: traefik-default
                spec:
                  entryPoints:
                  - websecure
                  routes:
                  - kind: Rule
                    match: Host(`${FQDN}`)
                    services:
                    - name: nginx
                      port: 80
                  tls:
                    secretName:  mycert-tls
            - path: /home/ubuntu/nginx-svc.yaml
              content: |
                apiVersion: v1
                kind: Service
                metadata:
                  name: nginx
                spec:
                  ports:
                    - port: 80
                  selector:
                    app: nginx
          runcmd:
            # Update packages
            - sudo apt-get update -y

            # Ensure snap is available (on Ubuntu it is by default)
            - sudo apt-get install -y snapd

            # Install MicroK8s with the requested channel
            - sudo snap install microk8s --classic --channel=${MicroK8sChannel}

            # Add default Ubuntu user to microk8s group & prepare kube dir
            - sudo usermod -a -G microk8s ubuntu
            # - sudo mkdir -p /home/ubuntu/.kube

            # Provide a kubectl alias for the ubuntu user
            - echo "alias kubectl='microk8s kubectl'" | sudo tee -a /home/ubuntu/.bash_aliases
            - sudo chown -R ubuntu:ubuntu /home/ubuntu/

            # Wait for MicroK8s to be ready
            - sudo microk8s status --wait-ready -t 60

            # Enable recommended add-ons
            # - sudo microk8s refresh-certs --cert server.crt
            - sudo microk8s kubectl apply -f /var/snap/microk8s/current/args/cni-network/cni.yaml
            - sudo microk8s kubectl create clusterrolebinding oidc-reviewer --clusterrole=system:service-account-issuer-discovery --group=system:unauthenticated

            # Change Cluster FQDN:IP
            - sudo microk8s kubectl config set-cluster microk8s-cluster --server=https://${FQDN}:${KubeAPIPort}
            #- sudo microk8s config > /home/ubuntu/kube.config

            # Create a tempuser with full cluster access for 1 week
            - sudo microk8s kubectl create serviceaccount temp-user
            - sudo microk8s kubectl create clusterrolebinding temp-user-binding --clusterrole=cluster-admin --serviceaccount=default:temp-user
            - sudo microk8s kubectl config set-credentials temp-user --token=`sudo microk8s kubectl create token temp-user --duration=48h`
            - sudo microk8s kubectl config set-context temp-user-context --cluster=microk8s-cluster --user=temp-user
            - sudo microk8s kubectl config use-context temp-user-context
            - sudo microk8s kubectl config view --minify --raw > /home/ubuntu/temp-user.kubeconfig
            - sudo microk8s kubectl config use-context microk8s

            # Create an nginx pod (needed for HTTP-01 challenge and enable cert-manager
            - sudo microk8s kubectl create deployment nginx --image=nginx

            # Create Cluster issuer and certificate resource to secure NGINX traffic 
            - sleep 120
            - sudo microk8s kubectl apply -f /home/ubuntu/clusterissuers.yaml
            - sudo microk8s kubectl apply -f /home/ubuntu/cert.yaml
            - sudo microk8s kubectl apply -f /home/ubuntu/traffic.yaml
            - sudo microk8s kubectl apply -f /home/ubuntu/nginx-svc.yaml

  MicroK8sDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      # Choose either HostedZoneId or HostedZoneName at deploy time.
      # CloudFormation requires ONLY ONE of these fields to be set.
      # HostedZoneId: !If [UseHostedZoneId, !Ref HostedZoneId, !Ref 'AWS::NoValue' ]
      #HostedZoneName: !If [UseHostedZoneName, !Ref HostedZoneName, !Ref 'AWS::NoValue' ]
      HostedZoneName: !Ref HostedZoneName
      #Name: !Ref RecordName
      Name: !Join [".", [!Ref ClusterName , !Ref HostedZoneName]]
      Type: A
      TTL: '300'
      ResourceRecords:
        - !GetAtt MicroK8sInstance.PublicIp
    DependsOn:
      - MicroK8sInstance

Outputs:
  VpcId:
    Description: VPC ID
    Value: !Ref VPC
  PublicSubnetId:
    Description: Public Subnet ID
    Value: !Ref PublicSubnet
  InstanceId:
    Description: EC2 Instance ID
    Value: !Ref MicroK8sInstance
  PublicIp:
    Description: Public IPv4 of the MicroK8s node
    Value: !GetAtt MicroK8sInstance.PublicIp
  SSHCommand:
    Description: Example SSH command
    Value: !Sub "ssh -i <path-to-your-key.pem> ubuntu@${MicroK8sDNSRecord}"
  K8sReadyCheck:
    Description: Command (after SSH) to verify MicroK8s is ready
    Value: "microk8s status --wait-ready"
  KubeAliasInfo:
    Description: kubectl alias is set for 'ubuntu' user (kubectl -> microk8s kubectl)
    Value: "source ~/.bash_aliases && kubectl get nodes"
  KubeConfig:
    Description: kube.config file to be shared with cluster user
    Value: "cat /home/ubuntu/kube.config"
